# tree-sitter-gram

./: .gitignore  .tool-versions  CRATES_IO.md  Cargo.toml  Makefile  binding.gyp  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: build.yml  ci.yml  gram-lsp-release-assets.yml  gram-release-assets.yml  publish.yml
.specify/memory/: constitution.md
crates/gram-diagnostics/: Cargo.toml  README.md
crates/gram-diagnostics/src/: lib.rs
docs/: pattern.schema.json
editors/zed/: extension.toml
proposals/: gram-cli-w-extentions.md
scripts/: prepare-release.sh  prepare-zed-extension.sh
specs/010-publish-lib/: plan.md
src/: parser.c
tools/gram/: Cargo.toml  README.md
tools/gram/skills/gram/: SKILL.md
tools/gram/src/: analyze.rs  elements.rs  lib.rs  lint.rs  main.rs  markdown.rs  parse.rs  record_keys.rs  symbols.rs  top_level.rs  utf16.rs
tools/gram/src/extension/: install.rs  registry.rs
tools/gram/src/skill/: install.rs  list.rs  mod.rs  remove.rs
tools/gram/tests/: cli_check.rs  cli_skill.rs
tools/lsp/: Cargo.toml  README.md
tools/lsp/src/: lib.rs  lsp.rs
