[package]
name = "gram-diagnostics"
description = "Shared LSP-compatible diagnostic types for gram-data and cypher-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["diagnostics", "linting", "gram", "tree-sitter"]
categories = ["data-structures"]
publish = true

[dependencies]
serde = { version = "1", features = ["derive"] }
