[package]
name = "gram-lsp"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for Gram (.gram) files"
readme = "README.md"
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
gram-data = { path = "../gram" }
gram-diagnostics = { path = "../../crates/gram-diagnostics" }
tree-sitter = "0.26"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gram-lsp"
path = "src/main.rs"
